--- a/src/pages/css/wizard.css
+++ b/src/pages/css/wizard.css
@@ -190,7 +190,7 @@
 }
 
 .section-desc {
-    color: #8892b0;
+    color: #a8b2d1;
     margin: 0 0 2rem 0;
 }
 
@@ -278,7 +278,7 @@
 .form-group label {
     font-size: 0.875rem;
     font-weight: 500;
-    color: #8892b0;
+    color: #a8b2d1;
 }
 
 .form-group input,
@@ -632,7 +632,7 @@
 }
 
 .publish-success p {
-    color: #8892b0;
+    color: #a8b2d1;
     margin: 0 0 2rem 0;
 }
 
